compiler/tests/success/x86-64/test_ptr_fn_inline.jazz
inline
fn init (reg mut ptr u64[3] p) -> reg u64[3] {
   inline int i;
   for i = 0 to 3 {
      p[i] = i;
   }
   return p;
}

export fn foo() -> reg u64 {
  stack u64[3] s;
  reg u64 r;
  inline int i;
  s = init(s);
  r = 0;
  for i = 0 to 3 {
   r += s[i];
  }
  return r;
}
