compiler/tests/fail/stack_allocation/x86-64/write_constant_pointer_arg2.jazz
fn init (reg ptr u64[3] p) -> reg ptr u64[3]  {
   inline int i;
   for i = 0 to 3 {
      p[i] = 0;
   }
  return p; 
}

fn set (reg ptr u64[3] p) -> reg u64 {
   reg u64 r;
   p[0] = 1;
   r = p[1];
   return r;
}

export fn foo5() -> reg u64 {
  stack u64[3] s;
  reg u64 r;
  inline int i;
  s = init(s);  
  r = set(s);
  r += s[0];
  return r;
}


